--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -33,27 +33,14 @@ http {
 	server {
 		listen 80;
 		
-		location /uploads/
+		location ^~ /uploads/ {
+			root /home/box/web/;
+		}
+		location ~* ^.+\.\w+$ {
+			root /home/box/web/public/;
+		}
+		location / {
+			return 404;
+		}
+	}	
 }
-
-
-#mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-#}
