--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,17 +1,19 @@
 server {
-	listen 80;
-	
-	location ^~ /uploads/ {
+    listen 80;
 
-		root /home/box/web/;
-	}
+    location ^~ /uploads/ {
+        root /home/box/web/;
+    }
 
-	location ~* ^.+\.\w+$ {
+    location ~* ^.+\.\w+$ {
+        root /home/box/web/public/;
+    }
 
-		root /home/box/web/public/;
-	}
+    location /hello/ {
+        proxy_pass http://127.0.0.1:8080;
+    }
 
-	location / {
-		return 404;
-	}
+    location / {
+        return 404;
+    }
 }
