--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,13 +1,13 @@
 server {
-    listen 80;
+    #listen 80;
 
-    location ^~ /uploads/ {
-        root /home/box/web/;
-    }
+    #location ^~ /uploads/ {
+    #    root /home/box/web/;
+    #}
 
-    location ~* ^.+\.\w+$ {
-        root /home/box/web/public/;
-    }
+    #location ~* ^.+\.\w+$ {
+    #   root /home/box/web/public/;
+    #}
 
     location /hello/ {
         proxy_pass http://127.0.0.1:8080;
@@ -16,7 +16,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location / {
-        return 404;
-    }
+    #location / {
+    #    return 404;
+    #}
 }
