--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    #listen 80;
+    listen 80;
 
     #location ^~ /uploads/ {
     #    root /home/box/web/;
@@ -11,7 +11,7 @@ server {
 
     location /hello/ {
         proxy_pass http://0.0.0.0:8080;
-        proxy_set_header Host $server_name;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
