--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,7 +9,7 @@ server {
     #   root /home/box/web/public/;
     #}
 
-    location /hello/ {
+    location ^~ /hello/ {
         proxy_pass http://0.0.0.0:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
